--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@ button {
 }
 button:hover {
     background: rgba(0, 47, 255, 1);
-
+}
+button:active {
+    background: rgb(64, 99, 255);
 }
 
 .badge {
@@ -200,7 +202,10 @@ body.open .modal {
 
 }
 .footer button:hover {
-    background: rgba(0, 47, 255, 0.514);
+    background: rgba(0, 47, 255, 1);
+}
+.footer button:active{
+    background: rgb(64, 99, 255);
 }
 @keyframes pulse {
     0% { transform: scale(1); }
