--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ html, body {
 
 button {
     cursor: pointer;
-    background: rgba(0, 47, 255, 0.85);
+    background: #458f8d;
     color: #f9f9f9;
     border: 0;
     border-radius: 12px;
@@ -28,10 +28,10 @@ button {
     transition: background 0.3s ease, transform 0.2s ease;
 }
 button:hover {
-    background: rgba(0, 47, 255, 1);
+    background: #69afae;
 }
 button:active {
-    background: rgb(64, 99, 255);
+    background: #559aa2;
 }
 
 .badge {
@@ -39,7 +39,7 @@ button:active {
     top: -8px;
     right: -10px;
     background: rgba(255,255,255,0.3);
-    color: #002fff;
+    color: #345e63;
     border-radius: 50%;
     padding: 4px;
     font-size: 12px;
@@ -191,7 +191,7 @@ body.open .modal {
     border-top: 1px solid rgba(255,255,255,0.2);
 }
 .footer button {
-    background: rgba(0,47,255,0.9);
+    background: #458f8d;
     color: #fff;
     border-radius: 12px;
     padding: 8px 18px;
@@ -202,10 +202,10 @@ body.open .modal {
 
 }
 .footer button:hover {
-    background: rgba(0, 47, 255, 1);
+    background: #69afae;
 }
 .footer button:active{
-    background: rgb(64, 99, 255);
+    background: #559aa2;
 }
 @keyframes pulse {
     0% { transform: scale(1); }
