--- a/max2.html
+++ b/max2.html
@@ -659,7 +659,7 @@ body.open .modal {
 }
 
 .user-message .user {
-    background: #00e1ff;
+    background: #458f8d;
     align-self: flex-end;
     text-align: right;
 }
