--- a/max2.html
+++ b/max2.html
@@ -590,7 +590,7 @@ body.open .modal {
     border-top: 1px solid rgba(255,255,255,0.2);
 }
 .footer button {
-    background: rgba(0,47,255,0.9);
+    background: #458f8d;
     color: #fff;
     border-radius: 12px;
     padding: 8px 18px;
@@ -601,10 +601,10 @@ body.open .modal {
 
 }
 .footer button:hover {
-    background: rgba(0, 47, 255, 1);
+    background: #69afae;
 }
 .footer button:active{
-    background: rgb(64, 99, 255);
+    background: #559aa2;
 }
 @keyframes pulse {
     0% { transform: scale(1); }
