--- a/vadvisor.html
+++ b/vadvisor.html
@@ -37,7 +37,7 @@
         <header class="gradient-bg text-white p-6 shadow-lg">
         <div class="max-w-6xl mx-auto flex items-center justify-between">
             <div class="flex items-center space-x-3">
-                    <img src="izdyr2.png" alt="Header Image" class="w-20 h-20 object-cover ">
+                    <img src="F43E8EA3-3B0B-422F-89DC-A4E72E51E19E.jpeg" alt="Header Image" class="w-20 h-20 object-cover ">
                 <div>
                     <h1 class="text-2xl font-bold">دبیرستان واله(چیتگر)</h1>
                     <p class="text-blue-100 text-sm">برنامه مطالعاتی دانش‌آموزی</p>
