--- a/stu.html
+++ b/stu.html
@@ -128,23 +128,28 @@
 <body class="bg-gray-50">
 
   <!-- Header -->
-    <header class="gradient-bg text-white p-6 shadow-lg">
-        <div class="max-w-6xl mx-auto flex items-center justify-between">
-            <div class="flex items-center space-x-3">
-                            <img src="F43E8EA3-3B0B-422F-89DC-A4E72E51E19E.png" alt="Header Image" class="w-20 h-20 object-cover ">
-                <div>
-                    <h1 class="text-2xl font-bold">دبیرستان واله(چیتگر)</h1>
-                    <p class="text-blue-100 text-sm">برنامه مطالعاتی دانش‌آموزی</p>
-                </div>
-            </div>
-
-            <div class="text-right">
-                <p id="greeting" class="text-sm text-blue-100">لطفاً وارد شوید</p>
-                <p id="roleLabel" class="font-semibold">داشبورد دانش‌آموز</p>
-
-            </div>
-        </div>
-    </header>
+  <header class="relative gradient-bg text-white p-6 shadow-lg">
+    <!-- سایر عناصر هدر -->
+    <div class="max-w-6xl mx-auto flex items-center justify-between">
+      <div>
+        <h1 class="text-2xl font-bold">دبیرستان واله(چیتگر)</h1>
+        <p class="text-blue-100 text-sm">برنامه مطالعاتی دانش‌آموزی</p>
+      </div>
+      <div class="text-right">
+        <p id="greeting" class="text-sm text-blue-100">لطفاً وارد شوید</p>
+        <p id="roleLabel" class="font-semibold">داشبورد دانش‌آموز</p>
+      </div>
+    </div>
+  
+    <!-- تصویر چسبیده به لبه پایین -->
+    <img
+      src="https://izdyr.github.io/F43E8EA3-3B0B-422F-89DC-A4E72E51E19E.png"
+      alt="Header Image"
+      class="absolute left-1/2 bottom-0 -translate-x-1/2 w-20 h-20 object-cover"
+    />
+  </header>
+  
+  
 
   <div class="max-w-6xl mx-auto p-6">
     <!-- Stats -->
