--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@
     const CHANNEL_NAME='valeh-sync';
 const defaultDb = {
   students: [
+    {id:1,firstName:'Ali',lastName:'Rezaei',nationalId:'1001',studyPlan:[{day:0,time:'14:00',duration:2,subject:'Mathematics'},{day:2,time:'15:00',duration:2,subject:'Chemistry'}],studySessions:[{date:'2024-01-12',subject:'Mathematics',duration:2,amount:'Chapter 3'}],progress:78,hoursThisWeek:4.0,updatedAt:Date.now()},
     { id: 1, firstName: 'امیر علی', lastName: 'ابراهیم وندی', nationalId: '8402920', studyPlan: [], studySessions: [], progress: 0, hoursThisWeek: 0.0, updatedAt: Date.now() },
     { id: 2, firstName: 'عرشیا', lastName: 'احمدی', nationalId: '8402921', studyPlan: [], studySessions: [], progress: 0, hoursThisWeek: 0.0, updatedAt: Date.now() },
     { id: 3, firstName: 'امیرحسین', lastName: 'احمدی', nationalId: '8428153', studyPlan: [], studySessions: [], progress: 0, hoursThisWeek: 0.0, updatedAt: Date.now() },
